# kaos

./: .clang-format  CMakeLists.txt  Makefile  a20setup.asm  bootloader.asm  debug.sh  entry.asm  gdbscript.gdb  irq.c  irq.h  kaos.c  kaos.h  kaos_bool.h  kernel.asm  kernel.c  keyboard.c  keyboard.h  link.ld  memcpy.c  memcpy.h  memory_map.h  misc.asm  pci.c  pci.h  pic.c  pic.h  port_io.h  portio.h  postprocess-bootloader.py  read_mbr.py  run.sh  strfmt.c  strfmt.h  todo.org  translate-bootloader-lst.py  tty.c  tty.h  uart.c  uart.h  utils.asm  (+2 more)
bootloader/: CMakeLists.txt  bootloader.asm
common_asm/: CMakeLists.txt  utils.asm
kernel/: CMakeLists.txt  bios_system_info.h  cmos.c  cmos.h  entry.asm  floppy.c  floppy.h  i8254x.c  i8254x.h  ide.c  ide.h  irq.c  irq.h  kaos.c  kaos.h  kaos_int.h  kernel.c  keyboard.c  keyboard.h  kmain.c  memcpy.c  memcpy.h  panic.c  panic.h  pci.c  pci.h  pic.h  portio.h  ps2.c  ps2.h  shell.c  shell.h  strfmt.c  strfmt.h  tty.c  tty.h  uart.c  uart.h  vga.c  vga.h
kernel/test/: test_strfmt.c
stdlib/: CMakeLists.txt  kaos_bool.h  kaos_int.h  max_min.h  memcpy.c  stddef.h  strfmt.c  strfmt.h
stdlib/test/: CMakeLists.txt  test_strfmt.c
